src/css/popup.css
body {
  /* background-color: #000000; */
  width: 350px;
  overflow-wrap: break-word;
}

.title {
  font-size: 15px;
  font-weight: 600;
}

.copy-to-clipboard {
  background-image: url('../img/clipboard.svg');
  background-repeat: no-repeat;
  background-size: auto;
  height: 30px;
  width: 30px;
  margin-right: 5px;
}

